Fix spectrum elements spacing

--- a/source/_sass/_profile.scss
+++ b/source/_sass/_profile.scss
@@ -182,6 +182,7 @@
     }
   }
   &--exemplar {
+    margin-bottom: 3rem;
     h1 {
       font-size: 2.2rem;
       margin-bottom: 2rem;
@@ -219,7 +220,7 @@
     }
 
     .branding {
-      margin-bottom: 8rem;
+      margin-bottom: 5rem;
     }
 
     .large-row {
